--- a/daugats_ApskatiLatviju-master/ApskatiLatviju/style.css
+++ b/daugats_ApskatiLatviju-master/ApskatiLatviju/style.css
@@ -62,6 +62,8 @@ section {
 }
 
 /*------Header------*/
+
+
 #login-button {
     position: absolute;
     top: 1rem;
@@ -138,7 +140,7 @@ header nav ul li a{
     color: #333;
     font-size: 1.5rem;
     font-weight: bold;
-    transition: border-bottom 0.2s ease-in-out;
+
     transition: color 0.2s ease-in-out;
 }
 
@@ -146,6 +148,60 @@ header nav ul li a:hover {
     color: var(--maincolor);
     border-bottom: .3rem solid var(--maincolor);
     padding: 1.1rem 0;
+}
+
+/*------Nav Burger------*/
+
+.burger {
+  overflow: hidden;
+  background-color: var(--secondary);
+  position: relative;
+  padding: 1rem;
+  display: none;
+}
+
+.burger .logo {
+  font-size: 2rem;
+  font-weight: bold;
+  color: #555;
+  display: flex;
+  align-items: center;
+}
+
+.burger .logo img {
+  height: 3rem;
+  margin-right: 1rem;
+}
+
+.burger #myLinks {
+  display: none;
+  text-align: center;
+}
+
+.burger a {
+  color: black;
+  padding: 20px 16px;
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: bold;
+  display: block;
+}
+
+.burger a.icon {
+  display: block;
+  position: absolute;
+  right: 0;
+  top: 0;
+  
+}
+
+.burger a:hover {
+  color: white;
+}
+
+.active {
+  background-color: #04AA6D;
+  color: white;
 }
 
 /*------Log In------*/
@@ -212,6 +268,43 @@ header nav ul li a:hover {
   button[type="submit"]:hover {
     color: var(--maincolor);
   }
+
+/*------User panel------*/
+
+#user-panel {
+  display: none;
+  position: absolute;
+  top: 3rem;
+  right: 1.5rem;
+  padding: .6rem;
+  background-color: var(--maincolor);
+  color: #000;
+  border: none;
+  border-radius: .3rem;
+  font-size: 1rem;
+  z-index: 2;
+  box-shadow: 0 0 1rem 0px rgba(0,0,0,0.2);
+}
+
+#user-panel p {
+  padding: 0;
+  border-bottom: solid 2px var(--secondary);
+}
+
+
+#user-panel ul {
+  list-style: none;
+}
+
+#user-panel li {
+  padding-top: 1rem;
+}
+
+#user-panel button {
+  background-color: var(--maincolor);
+  cursor: pointer;
+}
+
 
 /*------Home Page------*/
 
@@ -317,6 +410,7 @@ header nav ul li a:hover {
     padding: 1rem;
     border-radius: 5px;
     position: relative;
+    transition: transform 0.5s ease-in-out;
   }
 
   .post .btn-signup {
@@ -333,6 +427,11 @@ header nav ul li a:hover {
     color: var(--maincolor);
   }
   
+  .post:hover {
+    transform: translateY(-.2rem);
+    box-shadow: 0px 10px 25px -10px rgba(0, 0, 0, 0.45);
+  }
+
   .post:hover .btn-signup {
     display: block;
   }
@@ -476,4 +575,19 @@ footer .links a:hover {
 
 footer p {
     text-align: center;
+}
+
+/*------Device Comp------*/
+
+@media screen and (max-width: 1080px) {
+  header {
+      display: none;
+  }
+
+  .burger {
+      display: block;
+  }
+  #banner {
+    height: 5rem;
+  }
 }
