--- a/daugats_ApskatiLatviju-master/ApskatiLatviju/style.css
+++ b/daugats_ApskatiLatviju-master/ApskatiLatviju/style.css
@@ -49,16 +49,10 @@ section {
     padding: 5rem 7%;
 }
 
-.add {
-    padding: .6rem;
-    background-color: var(--secondary);
-    color: white;
-    border: none;
-    border-radius: .5rem;
-    cursor: pointer;
-    font-size: 1rem;
-    width: 10rem;
-    text-align: center;
+.publisher {
+  color: #8a8a8a;
+  font-size: 1rem;
+  margin-top: 1rem;
 }
 
 /*------Header------*/
@@ -204,6 +198,124 @@ header nav ul li a:hover {
   color: white;
 }
 
+/*------Popups------*/
+
+.green_alert {
+  text-align: center;
+  color: var(--maincolor);
+  background-color: #72c26b;
+  width: 50%;
+  margin: 2rem auto;
+  font-size: 2.5rem;
+  padding: 1rem;
+  border-radius: .3rem;
+}
+
+.red_alert {
+  text-align: center;
+  color: var(--maincolor);
+  background-color: #d85e5e;
+  width: 50%;
+  margin: 2rem auto;
+  font-size: 2.5rem;
+  padding: 1rem;
+  border-radius: .3rem;
+}
+
+.popups {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 50rem;
+  margin: auto;
+  padding: 2rem;
+  text-align: center;
+  background-color: var(--maincolor);
+  border-radius: .3rem;
+  z-index: 2;
+  box-shadow: 0 0 5rem 0px rgba(0,0,0,0.5);
+}
+
+.open {
+  padding: .6rem;
+  background-color: var(--secondary);
+  color: white;
+  border: none;
+  border-radius: .5rem;
+  cursor: pointer;
+  font-size: 1rem;
+  width: 10rem;
+  text-align: center;
+}
+
+.close {
+  text-align: right;
+  cursor: pointer;
+}
+
+.close i {
+  background-color: #eee;
+  padding: 0.3rem;
+  border-radius: 0.2rem;
+}
+
+h2 {
+  margin-top: 0;
+}
+
+form {
+  background-color: #eee;
+  padding: 2rem;
+  border-radius: .3rem;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.form-group {
+  margin-bottom: 1rem;
+  text-align: left;
+}
+
+.big-text {
+  padding-bottom: 6rem;
+}
+
+.med-text {
+  padding-bottom: 2rem;
+}
+
+label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+}
+
+input {
+  width: 100%;
+  padding: 0.5rem;
+  border: none;
+  border-radius: .2rem;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
+  text-align: left;
+}
+
+button[type="submit"] {
+  display: block;
+  width: 100%;
+  padding: 0.75rem;
+  background-color: var(--secondary);
+  color: #000;
+  border: none;
+  border-radius: .5rem;
+  font-size: 1.1rem;
+  font-weight: bold;
+  margin-top: 1rem;
+  transition: background-color 0.2s ease-in-out;
+}
+
+button[type="submit"]:hover {
+  color: var(--maincolor);
+}
 /*------Log In------*/
 
 #login-popup {
@@ -221,29 +333,29 @@ header nav ul li a:hover {
     box-shadow: 0 0 5rem 0px rgba(0,0,0,0.5);
   }
   
-  h2 {
+  #login-popup h2 {
     margin-top: 0;
   }
   
-  form {
+  #login-popup form {
     background-color: #eee;
     padding: 2rem;
     border-radius: .3rem;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
   }
   
-  .form-group {
+  #login-popup .form-group {
     margin-bottom: 1rem;
     text-align: left;
   }
   
-  label {
+  #login-popup label {
     display: block;
     font-weight: bold;
     margin-bottom: 0.5rem;
   }
   
-  input {
+  #login-popup input {
     width: 100%;
     padding: 0.5rem;
     border: none;
@@ -251,7 +363,7 @@ header nav ul li a:hover {
     box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
   }
   
-  button[type="submit"] {
+  #login-popup button[type="submit"] {
     display: block;
     width: 100%;
     padding: 0.75rem;
@@ -263,9 +375,10 @@ header nav ul li a:hover {
     font-weight: bold;
     margin-top: 1rem;
     transition: background-color 0.2s ease-in-out;
+    cursor: pointer;
   }
   
-  button[type="submit"]:hover {
+  #login-popup button[type="submit"]:hover {
     color: var(--maincolor);
   }
 
@@ -419,12 +532,17 @@ header nav ul li a:hover {
     left: 50%;
     transform: translate(-50%, -50%);
     display: none;
+  }
+
+  .post .btn-signup button{
     background-color: #444;
     padding: 1rem;
     border-radius: .5rem;
     opacity: 90%;
     font-size: 1.5rem;
     color: var(--maincolor);
+    cursor: pointer;
+  
   }
   
   .post:hover {
@@ -468,6 +586,7 @@ header nav ul li a:hover {
     background-color:#eee;
     border-radius: .5rem;
     padding: 1rem;
+    margin: 1rem;
     display: flex;
     justify-content: space-between;
     position: relative;
@@ -496,6 +615,12 @@ header nav ul li a:hover {
     border-radius: .5rem;
     cursor: pointer;
     font-size: 1rem;
+}
+
+#news img {
+  width: 40rem;
+  height: 30rem;
+  overflow: hidden;
 }
 
 /*------About us------*/
